# python-project-boilerplate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.ide/: README.md  rules.md
docs/: project_structure.md  tasks.md
scripts/ci/: check_python_version.py  commit_msg_task_guard.py
src/app/: __init__.py  example.py
tests/: test_example.py
